# Dennou-OGCM

./: .gitattributes  .gitignore  COPYRIGHT  DIR_LIST  INSTALL  Makefile.am  README.md  build_memo  configure.ac  dcpom_compile.sh  dennou-ogcm_compile.sh
apps/: Makefile.am
apps/advectTestOnSphere/: advTest.f90
apps/globalSWModel/: Exp_Williamson94_Case1.f90  Exp_Williamson94_Case2.f90  GovernEquationSolver_mod.f90  GridSet_mod.f90  SimParameters_mod.f90  VariableSet_mod.f90  globalSWModel_main.f90
apps/gridGen/: gridGen.f90
doc/: INSTALL.rd  Makefile.am
doc/description/: Makefile  dcpom_description.tex  introduction.tex  reference.bib
doc/description/ogcm/: OGCM_config_example.tex  OGCM_description.tex  model_basic.tex  space_discretization.tex  time_discretization.tex
doc/description/sice/: SICE_config_example.tex  SICE_description.tex  model_basic.tex  space_discretization.tex  time_discretization.tex
doc/formulation/: formulation.tex
doc/ogcm/: main.tex
doc/ogcm/formulation/: basic_equation.tex  variational_basic_equation2.tex
doc/seaice_therm/formulation/: formulation.tex
doc/users-guide/: Makefile  dcpom_users-guide.tex  install.tex  introduction.tex  reference.bib
libsrc/: Makefile.am
libsrc/data/: .gitignore  GeometricField_mod.f90  List_d_mod.f90  List_i_mod.f90  List_mod.f90  List_vec3d_mod.f90  geometricfield_srcGen.sh  list_mod.template.f90  pointScalarField_mod.f90  pointVectorField_mod.f90  surfaceScalarField_mod.f90  surfaceVectorField_mod.f90  volScalarField_mod.f90  volVectorField_mod.f90
libsrc/fvm/: Makefile.am
libsrc/fvm/Hex_C-Grid/: fvCalculus_mod.f90  fvMeshInfo_mod.f90
libsrc/io/: netcdfDataHelper_mod.f90
libsrc/math/: .gitignore  Makefile.am  SphericalCoord_mod.f90  VectorSpace_mod.f90  crossProd_mod.f90  dotProd.template.f90  dotProd_vector2d_mod.f90  dotProd_vector3d_mod.f90  vector2d_mod.f90  vector3d_mod.f90
libsrc/mesh/: Makefile.am  SCVoronoiGen_mod.f90  SVoronoiGen2_mod.f90  VoronoiGen2_mod.f90
libsrc/mesh2/: HexTriIcMesh_mod.f90  Makefile.am  MeshUsageMask_mod.f90
model/dogcm/: DOGCM_main_mod.f90  Makefile.am  ogcm_main.f90
model/dogcm/admin/: DOGCM_Admin_BC_mod.f90  DOGCM_Admin_Constants_mod.f90  DOGCM_Admin_GaussSpmGridIndexDef.h  DOGCM_Admin_GaussSpmGrid_mod.f90  DOGCM_Admin_GaussSpmVFvmGrid_mod.f90  DOGCM_Admin_GovernEq_mod.f90  DOGCM_Admin_GridDef_mod.f90  DOGCM_Admin_Grid_mod.f90  DOGCM_Admin_TInteg_mod.f90  DOGCM_Admin_Variable_mod.f90  Makefile.am
model/dogcm/boundary/: DOGCM_Boundary_common_mod.f90  DOGCM_Boundary_driver_mod.f90  DOGCM_Boundary_hspm_vfvm_mod.f90  DOGCM_Boundary_spm_mod.f90  DOGCM_Boundary_vars_mod.f90  Makefile.am
model/dogcm/dynamics/: DOGCM_Dyn_driver_mod.f90  DOGCM_Dyn_spm_mod.f90  HBEBaroc_spm_mod.f90  HBEBarot_spm_mod.f90  HBEDiagnose_spm_mod.f90  Makefile.am
model/dogcm/exp/: DOGCM_Exp_driver_mod.f90
model/dogcm/io/: DOGCM_IO_History_mod.f90  DOGCM_IO_Restart_mod.f90  Makefile.am
model/dogcm/physics/: DOGCM_Phys_driver_mod.f90  DOGCM_Phys_hspm_vfvm_mod.f90  DOGCM_Phys_spm_mod.f90  Makefile.am
model/dogcm/seaice/: DSIceDef.h  DSIce_main_mod.f90  Makefile.am
model/dogcm/src/: Makefile.am  SRC_LIST  ogcm_main.f90
model/dogcm/tint/: DOGCM_TInt_LFAM3_mod.f90  DOGCM_TInt_common_mod.f90  DOGCM_TInt_driver_mod.f90  Makefile.am
model/dogcm/util/: EOSDriver_mod.f90  EOS_JM95_mod.f90  EOS_Linear_mod.f90  EOS_SimpleNonLinear_mod.f90  Makefile.am  SpmlUtil_mod.f90
model/globalSWModel_DG/: DGBaseMod_test.f90  DGCalcusUtil_mod.f90  DGCoordConvert_mod.f90  DGElement_mod.f90  DGHelper_mod.f90  GovernEquationSolver_mod.f90  GridSet_mod.f90  LagrangeBasisTool.f90  LagrangePolyn_mod.f90  Makefile.am  OutputData_mod.f90  SimParameters_mod.f90  VariableSet_mod.f90  globalSWModel_main.f90
model/globalSWModel_FVM/: Exp_Williamson94_Case2.f90  Exp_Williamson94_Case5.f90  GovernEquationSolver_mod.f90  GridSet_mod.f90  Makefile.am  OutputData_mod.f90  SimParameters_mod.f90  VariableSet_mod.f90  globalSWModel_main.f90
model/ogcm/: GovernEqSolverDriver_mod.f90  Makefile.am  VariableSet_mod.f90  ogcm_main.f90
model/ogcm/dynamics/: BarotModeTimeFilter_mod.f90  HydroBouEqSolverRHS_mod.f90  HydroBouEqSolver_mod.f90  Makefile.am  TimeFilterParams.f90
model/ogcm/setup/: DataFileSet_mod.f90  GridSet_mod.f90  Makefile.am  TemporalIntegSet_mod.f90  VariableSet_mod.f90
model/ogcm/util/: CGridFieldDataUtil_mod.f90  EOSDriver_mod.f90  (+3 more)
model/sogcm/: DSOGCM_main_mod.f90  GovernEqSolverDriver_mod.f90  InitCond_mod.f90  Makefile.am  ogcm_main.f90
src/: Makefile.am
src/data/: .gitignore  Field_d_mod.f90  Field_i_mod.f90  Field_vec3d_mod.f90  GeometricField_mod.f90  List_d_mod.f90  List_i_mod.f90  List_mod.f90  List_vec3d_mod.f90  Makefile.am  geometricfield_binaryOptr.template.f90  geometricfield_mod.template.f90  geometricfield_srcGen.sh  list_mod.template.f90  list_srcGen.sh  pointScalarField_mod.f90  pointVectorField_mod.f90  surfaceScalarField_mod.f90  surfaceVectorField_mod.f90  volScalarField_mod.f90  volVectorField_mod.f90
src/fvm/: Makefile.am  fvCalculus_mod.f90  fvMeshInfo_mod.f90
src/io/: Makefile.am  netcdfDataHelper_mod.f90  netcdfDataReader_mod.f90  netcdfDataWriter_mod.f90  vtkDataWriter_mod.f90
src/math/: .gitignore  LinearMapping_mod.f90  Makefile.am  SphericalCoord_mod.f90  VectorSpace_mod.f90  crossProd_mod.f90  dotProd.template.f90  dotProd_vector2d_mod.f90  dotProd_vector3d_mod.f90  geometry2D_mod.f90  geometry_mod.f90  vecspace_srcGen.sh  vector2d_mod.f90  vector3d_mod.f90  vectorspace.template.f90
src/mesh/: Makefile.am  PolyMesh_mod.f90  SCVoronoiGen_mod.f90  SVoronoiGen2_mod.f90  SVoronoiGen_mod.f90
src/mesh2/: HexTriIcMesh_mod.f90  HexTriRectMesh_mod.f90  Makefile.am  MeshUsageHelper_mod.f90
test/: Makefile.am
test/advectTestOnSphere/: HexTriIcMesh_mod.f90  SVoronoiGen_mod.f90  advTest.f90
test/apps/: Makefile.am
test/unitTests/: Makefile.am  test_geometricField_mod.f90  test_io_mod.f90
tool/: .gitignore  Makefile.am
tool/gridGen/: ShoreLine_SphericalSegment_mod.f90  ShoreLine_mod.f90  gridGen.f90
tool/nc2vtkConvert/: nc2vtk_main.f90
(+490 files in other folders)
