SUBDIRS = 

AM_FCFLAGS = $(SYSFFLAGS) \
	$(MODPATHFLAG)$(srcdir)/ 

CLEANFILES = *$(MODEXT)

noinst_LTLIBRARIES = libDQGModelMath.la
dist_libDQGModelMath_la_SOURCES = \
	vector2d_mod.f90 \
	vector3d_mod.f90 \
	dotProd_vector2d_mod.f90 \
	dotProd_vector3d_mod.f90 \
	crossProd_mod.f90 \
	VectorSpace_mod.f90 \
	LinearMapping_mod.f90 \
	SphericalCoord_mod.f90 \
	geometry2D_mod.f90 \
	geometry_mod.f90 

